# book-network-concepts

./: README.md  pyproject.toml
chapter05/: webclient.py  webserver.py
chapter05/test/: http_request  http_response
chapter09/: webserver.py
chapter12/: timeclient.py
chapter13/: wordclient.py  wordserver.py
chapter16/: test.sh  validate_tcp_packet.py
chapter19/: netfuncs.py
chapter22/: dijkstra.py  example1_output.txt
